--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,21 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
+    <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
+
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -39,6 +44,38 @@
             <span class="counter">140</span>
           </form>
         </section>
+
+        <div>
+            <article class="tweet">
+              <header>
+
+                <div class=userhead>
+                  <div class="username">
+                    <span>
+                      <img class="icon" src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
+                    </span>
+                    <span class=usernamePosition>
+                    user
+                    </span>
+                  </div>
+
+                  <div class="handle">
+                    handle
+                  </div>
+                </div>
+              </header>
+              <section>
+                Some great tweet.
+
+              </section>
+              <footer>
+                Date
+              </footer>
+            </article>
+
+        </div>
+
+
     </main>
 
   </body>
