render tweets appended

--- a/public/index.html
+++ b/public/index.html
@@ -45,35 +45,31 @@
           </form>
         </section>
 
-        <div>
-            <article class="tweet">
-              <header>
+        <section id="tweet-container">
 
+            <article  class="tweet">
+              <header>
                 <div class=userhead>
                   <div class="username">
                     <span>
-                      <img class="icon" src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
+                      <img class="icon" src="">
                     </span>
+
                     <span class=usernamePosition>
-                    user
                     </span>
                   </div>
 
                   <div class="handle">
-                    handle
                   </div>
                 </div>
               </header>
-              <section>
-                Some great tweet.
-
+              <section class="content">
               </section>
-              <footer>
-                Date
+              <footer class="time">
               </footer>
             </article>
 
-        </div>
+        </section>
 
 
     </main>
