README updated, like feature done but not connected to mongodb

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/error.css" type="text/css" />
-
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -27,6 +25,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/likes-counter.js"></script>
 
   </head>
 
@@ -40,6 +39,7 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+
       <!-- new tweet to compose -->
         <section class="new-tweet">
           <h2>Compose Tweet</h2>
